By using position, fix header and made exaple image section

--- a/www/index.html
+++ b/www/index.html
@@ -46,18 +46,22 @@
         <div class="example-inner">
           <h2 class="example-title">Наши работы</h2>
           <div class="example-flex">
-            <div class="example-img" style="background-image: url('images/zoomed_bow_tie.jpg')">
-              <p class="example-text">Бабочка такая</p>
-            </div>
-            <div class="example-img" style="background-image: url('images/case_bow_tie.jpg')">
-              <p class="example-text">Бабочка растакая</p>
-            </div>
-            <div class="example-img" style="background-image: url('images/man_bow_tie.jpg')">
-              <p class="example-text">Бабочка сякая</p>
-            </div>
-            <div class="example-img" style="background-image: url('images/cat_bow_tie.jpg')">
-              <p class="example-text">Кривая</p>
-            </div>
+            <figure class="example-figure">
+              <img src="images/zoomed_bow_tie.jpg" alt="" class="example-img">
+              <figcaption class="example-img-text">Бабочка такая</figcaption>
+            </figure>
+            <figure class="example-figure">
+              <img src="images/case_bow_tie.jpg" alt="" class="example-img">
+              <figcaption class="example-img-text">Бабочка растакая</figcaption>
+            </figure>
+            <figure class="example-figure">
+              <img src="images/man_bow_tie.jpg" alt="" class="example-img">
+              <figcaption class="example-img-text">Бабочка сякая</figcaption>
+            </figure>
+            <figure class="example-figure">
+              <img src="images/cat_bow_tie.jpg" alt="" class="example-img">
+              <figcaption class="example-img-text">Кривая</figcaption>
+            </figure>
           </div>
           <a href="#" class="btn">Все бабочки</a>
         </div>
@@ -71,9 +75,11 @@
             согласует удобное время для встречи. На встрече он снимет мерки и
             поможет обределиться с тканью.</p>
           <div class="order-form">
-            <input type="text" class="user-name" placeholder="Введите ваше имя">
-            <input type="text" class="user-number" placeholder="Введите ваш номер">
-            <a href="#" class="btn">Заказать</a>
+            <form action="">
+              <input type="text" class="user-name" placeholder="Введите ваше имя">
+              <input type="text" class="user-number" placeholder="Введите ваш номер">
+              <a href="#" class="btn">Заказать</a>
+            </form>
           </div>
         </div>
       </section>
