Made images in example section clickable

--- a/www/index.html
+++ b/www/index.html
@@ -47,19 +47,19 @@
           <h2 class="example-title">Наши работы</h2>
           <div class="example-flex">
             <figure class="example-figure">
-              <img src="images/zoomed_bow_tie.jpg" alt="" class="example-img">
+              <a href="#"><img src="images/zoomed_bow_tie.jpg" alt="" class="example-img"></a>
               <figcaption class="example-img-text">Бабочка такая</figcaption>
             </figure>
             <figure class="example-figure">
-              <img src="images/case_bow_tie.jpg" alt="" class="example-img">
+              <a href="#"><img src="images/case_bow_tie.jpg" alt="" class="example-img"></a>
               <figcaption class="example-img-text">Бабочка растакая</figcaption>
             </figure>
             <figure class="example-figure">
-              <img src="images/man_bow_tie.jpg" alt="" class="example-img">
+              <a href="#"><img src="images/man_bow_tie.jpg" alt="" class="example-img"></a>
               <figcaption class="example-img-text">Бабочка сякая</figcaption>
             </figure>
             <figure class="example-figure">
-              <img src="images/cat_bow_tie.jpg" alt="" class="example-img">
+              <a href="#"><img src="images/cat_bow_tie.jpg" alt="" class="example-img"></a>
               <figcaption class="example-img-text">Кривая</figcaption>
             </figure>
           </div>
