Added button scss and styles form section

--- a/www/index.html
+++ b/www/index.html
@@ -76,9 +76,9 @@
             поможет обределиться с тканью.</p>
           <div class="order-form">
             <form action="">
-              <input type="text" class="user-name" placeholder="Введите ваше имя">
-              <input type="text" class="user-number" placeholder="Введите ваш номер">
-              <a href="#" class="btn">Заказать</a>
+              <input type="text" class="order-form-field" placeholder="Иван Иванов">
+              <input type="text" class="order-form-field" placeholder="+7 800 888-88-88">
+              <button type="submit" class="btn btn-transparent">Заказать</button>
             </form>
           </div>
         </div>
@@ -110,3 +110,4 @@
     <script src="scripts/script.js"></script>
 </body>
 </html>
+
