Added new html file and began adaptive

--- a/www/index.html
+++ b/www/index.html
@@ -73,12 +73,20 @@
           <p class="order-text">
             Заполните форму - наш мастер свяжется с вами,
             согласует удобное время для встречи. На встрече он снимет мерки и
-            поможет обределиться с тканью.</p>
+            поможет определиться с тканью.</p>
           <div class="order-form">
-            <form action="">
-              <input type="text" class="order-form-field" placeholder="Иван Иванов">
-              <input type="text" class="order-form-field" placeholder="+7 800 888-88-88">
-              <button type="submit" class="btn btn-transparent">Заказать</button>
+            <form action="" class="form">
+              <div class="form-field">
+                <label for="name" class="form-label">Имя</label>
+                <input id="name" name="name" type="text" placeholder="Иван Иванов" class="form-input">
+              </div>
+              <div class="form-field">
+                <label for="phone" class="form-label">Телефон</label>
+                <input id="phone" name="phone" type="tel" placeholder="+7 800 888-88-88" class="form-input">
+              </div>
+              <div class="form-field">
+                <button type="submit" class="btn btn-transparent">Заказать</button>
+              </div>
             </form>
           </div>
         </div>
