--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
               </li>
             </ul>
           </nav>
+          <button class="button-burger"><img src="images/ic-burger_menu.svg" alt=""></button>
         </div>
       </div>
     </header>
@@ -36,7 +37,7 @@
       <section class="promo">
         <div class="promo-fade">
           <div class="promo-inner">
-            <h1 class="promo-title">Индивидуальный пошив<br> галсутков-бабочек</h1>
+            <h1 class="promo-title">Индивидуальный пошив<br> галстуков-бабочек</h1>
             <a href="" class="btn">Заказать бабочку</a>
           </div>
         </div>
@@ -46,19 +47,19 @@
         <div class="example-inner">
           <h2 class="example-title">Наши работы</h2>
           <div class="example-flex">
-            <figure class="example-figure">
+            <figure class="example-figure grid-zoom-tie">
               <a href="#"><img src="images/zoomed_bow_tie.jpg" alt="" class="example-img"></a>
               <figcaption class="example-img-text">Бабочка такая</figcaption>
             </figure>
-            <figure class="example-figure">
+            <figure class="example-figure grid-case-tie">
               <a href="#"><img src="images/case_bow_tie.jpg" alt="" class="example-img"></a>
               <figcaption class="example-img-text">Бабочка растакая</figcaption>
             </figure>
-            <figure class="example-figure">
+            <figure class="example-figure grid-man-tie">
               <a href="#"><img src="images/man_bow_tie.jpg" alt="" class="example-img"></a>
               <figcaption class="example-img-text">Бабочка сякая</figcaption>
             </figure>
-            <figure class="example-figure">
+            <figure class="example-figure grid-cat-tie">
               <a href="#"><img src="images/cat_bow_tie.jpg" alt="" class="example-img"></a>
               <figcaption class="example-img-text">Кривая</figcaption>
             </figure>
